--- a/chrome/includes/cascade-colours.css
+++ b/chrome/includes/cascade-colours.css
@@ -8,8 +8,8 @@
   /* These colours are (mainly) used by the
      Container Tabs Plugin */
   --uc-identity-colour-blue:      #7ED6DF;
-  --uc-identity-colour-turquoise: #55E6C1;
-  --uc-identity-colour-green:     #B8E994;
+  --uc-identity-colour-turquoise: #87DCC6;
+  --uc-identity-colour-green:     #C3E69F;
   --uc-identity-colour-yellow:    #F7D794;
   --uc-identity-colour-orange:    #F19066;
   --uc-identity-colour-red:       #FC5C65;
@@ -17,11 +17,11 @@
   --uc-identity-colour-purple:    #786FA6;
   
   /*  Cascades main Colour Scheme */
-  --uc-base-colour:               #1E2021;
-  --uc-highlight-colour:          #191B1C;
-  --uc-inverted-colour:           #FAFAFC;
-  --uc-muted-colour:              #AAAAAC;
-  --uc-accent-colour:             var(--uc-identity-colour-purple);
+  --uc-base-colour:               #2D2A2E;
+  --uc-highlight-colour:          #514A50;
+  --uc-inverted-colour:           #FDFFF1;
+  --uc-muted-colour:              #978C8C;
+  --uc-accent-colour:             var(--uc-identity-colour-red);
   
 }}
 
@@ -30,21 +30,21 @@
   
   /* These colours are (mainly) used by the
      Container Tabs Plugin */
-  --uc-identity-colour-blue:      #1D65F5;
-  --uc-identity-colour-turquoise: #209FB5;
-  --uc-identity-colour-green:     #40A02B;
-  --uc-identity-colour-yellow:    #E49320;
-  --uc-identity-colour-orange:    #FE640B;
+  --uc-identity-colour-blue:      #7ED6DF;
+  --uc-identity-colour-turquoise: #87DCC6;
+  --uc-identity-colour-green:     #C3E69F;
+  --uc-identity-colour-yellow:    #F7D794;
+  --uc-identity-colour-orange:    #F19066;
   --uc-identity-colour-red:       #FC5C65;
-  --uc-identity-colour-pink:      #EC83D0;
-  --uc-identity-colour-purple:    #822FEE;
+  --uc-identity-colour-pink:      #F78FB3;
+  --uc-identity-colour-purple:    #786FA6;
   
   /*  Cascades main Colour Scheme */
-  --uc-base-colour:               #FAFAFC;
-  --uc-highlight-colour:          #DADADC;
-  --uc-inverted-colour:           #1E2021;
-  --uc-muted-colour:              #191B1C;
-  --uc-accent-colour:             var(--uc-identity-colour-purple);
+  --uc-base-colour:               #FDFFF1;
+  --uc-highlight-colour:          #978C8C;
+  --uc-inverted-colour:           #2D2A2E;
+  --uc-muted-colour:              #514A50;
+  --uc-accent-colour:             var(--uc-identity-colour-red);
   
 }}
 
@@ -78,9 +78,9 @@
 
   --lwt-selected-tab-background-color: var(--uc-highlight-colour) !important;
 
-  --toolbar-bgcolor: var(--lwt-frame) !important;
-  --toolbar-color: var(--lwt-text-color) !important;
-  --toolbarseparator-color: var(--uc-accent-colour) !important;
+  --toolbar-bgcolor: var(--uc-base-colour) !important;
+  --toolbar-color: var(--uc-base-colour) !important;
+  --toolbarseparator-color: var(--uc-base-colour) !important;
   --toolbarbutton-hover-background: var(--uc-highlight-colour) !important;
   --toolbarbutton-active-background: var(--toolbarbutton-hover-background) !important;
 
